# rust_practice

./: README.md
concepts/: Cargo.toml
concepts/src/: main.rs
generic_project/: Cargo.toml
generic_project/src/: main.rs
hello_world/hello_cargo/: Cargo.toml
mygrep/: Cargo.toml  some_file.txt
mygrep/src/: lib.rs  main.rs
new_guessing_game/: Cargo.toml
new_guessing_game/src/: main.rs
rust_client/: Cargo.toml
rust_client/src/: main.rs
using_enums/: Cargo.toml
using_enums/src/: main.rs
using_structs/: Cargo.toml
using_structs/src/: main.rs
variable/: Cargo.toml
variable/src/: main.rs
